# trajetoria-ia

./: AGENTS.md  README.md
time-negocio/: .~lock.dados_projeto_x.xlsx#  briefing_cliente.md  dados_projeto_x.xlsx
time-negocio/CHALLENGES/: README.md
time-ti/: .env.example  AGENTS.md  README.md  pyproject.toml
time-ti/challenge/: README.md
time-ti/logs/: automacoes_fev.csv  automacoes_jan.csv  automacoes_mar.csv
time-ti/tips/: README.md
